Update contact information and enhance site descriptions; add animated section component

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "JVNR - Développeur Web Expert",
+  "name": "JVNR - Créateur de solutions digitales",
   "short_name": "JVNR",
-  "description": "Développeur web expert avec plus de 15 ans d'expérience. Spécialisé en SEO, performance web et accessibilité.",
+  "description": "Créateur de solutions digitales avec plus de 15 ans d'expérience. Spécialisé en SEO, performance web et accessibilité.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
