--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,55 @@
+# Dependencies
 node_modules
-.next
-.git
-.gitignore
-README.md
-Dockerfile
-.dockerignore
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Build outputs
+.next
+out
+dist
+
+# Environment files
 .env*.local
+.env.development
+.env.production
+
+# Git and version control
+.git
+.gitignore
+
+# Documentation and configs
+README.md
+*.md
+Dockerfile*
+.dockerignore
 nixpacks.toml
+
+# IDE and editor files
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Testing and coverage
+coverage
+.nyc_output
+.jest
+
+# Scripts and development tools
+scripts/
+*.log
+
+# Temporary files
+tmp/
+temp/
