--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/jspdf": "^1.3.3",
+    "@types/node": "^20.19.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "jspdf": "^3.0.1",
     "postcss": "^8.4.49",
+    "readline-sync": "^1.4.10",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
